--- a/index1.html
+++ b/index1.html
@@ -116,14 +116,14 @@
         <div class='card'>
         <h2> 황지환 소개 </h2>
         <h5> 2001.5.23일생  </h5>
-        <div class='fakeimg' style='height:200px;'> <img src="img/12.jpg"> </div>
+        <div class='fakeimg' style='height:200px;'> <img src="12.jpg"> </div>
         <p> 나는 누구냐면... </P>
         <p> 황지환이야.....신기하지? 나도 그래... </p>
         </div>
         <div class='card'>
         <h2> 나의 성격 </h2>
         <h5> 내 성격을 알고싶니?</h5>
-        <div class='fakeimg' style='height:200px;'><img src="img/13.jpg"> </div>
+        <div class='fakeimg' style='height:200px;'><img src="13.jpg"> </div>
         <p> 음.... </P>
         <p>밝은 척 하지만 진짜 밝아 옷을 좋아하고 디자인을 좋아해 그래서
         포토폴리오를 보여주려는거야 ㅎㅎ </p>
@@ -132,14 +132,14 @@
         <div class="rightcolumn">
         <div class="card">
         <h2> 자 이제 내 작품을 슬쩍봐 </h2>
-        <div class="fakeimg" style="height:200px;"> <img src="img/14.jpg"> </div>
+        <div class="fakeimg" style="height:200px;"> <img src="14.jpg"> </div>
         <p> 이건 기초디자인 과제였어 어때보여? </p>
         </div>
         <div class="card">
         <h3> 다른거도 볼래? </h3>
-        <div class="fakeimg"><img src="img/15.jpg"> </div>
-        <div class="fakeimg"> <img src="img/16.jpg"> </div>
-        <div class="fakeimg"> <img src="img/17.png">  </div>
+        <div class="fakeimg"><img src="15.jpg"> </div>
+        <div class="fakeimg"> <img src="16.jpg"> </div>
+        <div class="fakeimg"> <img src="17.png">  </div>
         </div>
         <div class="card">
         <h3> 인스타 놀러와 </h3>
